# alpha_core

./: .gitmodules  CITATION.cff  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: on-pull-request.yml
alpha_driver/src/alpha_common/include/alpha/common/: dictionary.h
alpha_driver/src/alpha_driver/launch/: driver.launch
alpha_driver/src/alpha_driver_uart/: CMakeLists.txt  package.xml
alpha_driver/src/alpha_driver_uart/config/: config.yaml
alpha_driver/src/alpha_driver_uart/include/alpha_driver_uart/: default.h  parameters.h  pico_driver.cpp  pico_driver.h  pico_ros.cpp  pico_ros.h  thruster_manager.cpp  thruster_manager.h  utility.h
alpha_driver/src/alpha_driver_uart/launch/: serial_test.launch  test_thruster.launch
alpha_driver/src/alpha_driver_uart/src/: node.cpp
alpha_driver/src/alpha_driver_uart/test/: serial_test.cpp  test_thruster.cpp
alpha_driver/src/alpha_mcu/: README.md
alpha_driver/src/alpha_mcu_uart/src/: main.cpp
alpha_driver/src/alpha_mcu_uart/src/alpha/: manager.cpp  manager.h  parameters.h  pwm_controller.cpp  pwm_controller.h
alpha_driver/src/alpha_power_manager/: power_manager.cpp  power_manager.hpp
alpha_localization/: CMakeLists.txt  package.xml
alpha_localization/launch/: robot_localization_global.launch  robot_localization_local.launch
alpha_localization/src/: depth_filter_node.cpp  depth_filter_node.hpp  geopose_publisher_node.cpp  geopose_publisher_node.hpp  imu_ned_enu.cpp  imu_ned_enu.hpp  pressure_to_depth_node.cpp
alpha_power_manager/: CMakeLists.txt  package.xml
alpha_power_manager/config/: power_manager.yaml
alpha_power_manager/launch/: power_manager.launch
alpha_power_manager/src/: power_manager.cpp  power_manager.hpp
alpha_pwm_driver/: CMakeLists.txt  Readme.md  package.xml
alpha_pwm_driver/config/: pwm_driver.yaml
alpha_pwm_driver/src/: I2CPeripheral.cpp  PCA9685.cpp  pwm_driver.cpp  pwm_driver.h
specifications/: thruster_t200.html  thruster_t500.html
